--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:description" content="Representamos os maiores criadores de conteúdo digital do Brasil." />
   <meta property="og:type"        content="website" />
   <meta property="og:image"       content="images/logo2.png" />
+  <meta property="og:url"         content="https://integrityagency.com.br" />
 
   <title>INTEGRITY AGENCY S.A. — Influenciadores & Streamers</title>
 
@@ -59,7 +60,7 @@
         <li><a href="#contato">Contato</a></li>
       </ul>
 
-      <button class="nav-cta" onclick="document.getElementById('contato').scrollIntoView({behavior:'smooth'})">
+      <button type="button" class="nav-cta" onclick="document.getElementById('contato').scrollIntoView({behavior:'smooth'})">
         Falar Conosco
       </button>
 
