--- a/index.html
+++ b/index.html
@@ -82,10 +82,12 @@
       <div class="hero-bg-glow" aria-hidden="true"></div>
 
       <div class="hero-logo-wrap">
-        <img src="images/logo2.png"
-             alt="Integrity Agency S.A. — Logo"
-             width="340"
-             height="400" />
+        <div class="hero-logo-3d" id="heroLogo3d">
+          <img src="images/logo2.png"
+               alt="Integrity Agency S.A. — Logo"
+               width="340"
+               height="400" />
+        </div>
       </div>
 
       <p class="hero-description">
