--- a/index.html
+++ b/index.html
@@ -242,43 +242,43 @@
       <div class="talent-grid reveal">
 
         <article class="talent-card">
-          <div class="talent-visual" aria-hidden="true">🎮</div>
+          <img class="talent-photo" src="images/FBZ.png" alt="FBZFPS" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
             <span class="talent-platform-badge">Twitch</span>
-            <div class="talent-name">KaioFPS</div>
-            <div class="talent-niche">FPS · Battle Royale</div>
-            <div class="talent-reach">3.2M seguidores</div>
+            <div class="talent-name">FbzFPS</div>
+            <div class="talent-niche">FPS · Counter Strike 2</div>
+            <div class="talent-reach">70K Seguidores Totais</div>
             <div class="talent-line" aria-hidden="true"></div>
           </div>
         </article>
 
         <article class="talent-card">
-          <div class="talent-visual" aria-hidden="true">✨</div>
+          <img class="talent-photo" src="images/Marinho.jpg" alt="Marinho" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
-            <span class="talent-platform-badge">Instagram</span>
-            <div class="talent-name">Layssa Vibe</div>
-            <div class="talent-niche">Lifestyle · Moda</div>
-            <div class="talent-reach">8.7M seguidores</div>
+            <span class="talent-platform-badge">Twitch</span>
+            <div class="talent-name">Marinho</div>
+            <div class="talent-niche">FPS · Counter Strike 2</div>
+            <div class="talent-reach">50K Seguidores Totais</div>
             <div class="talent-line" aria-hidden="true"></div>
           </div>
         </article>
 
         <article class="talent-card">
-          <div class="talent-visual" aria-hidden="true">🎵</div>
+          <img class="talent-photo" src="images/Guh9.jpg" alt="guH" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
-            <span class="talent-platform-badge">TikTok</span>
-            <div class="talent-name">DuoGabz</div>
-            <div class="talent-niche">Música · Entretenimento</div>
-            <div class="talent-reach">12.1M seguidores</div>
+            <span class="talent-platform-badge">Twitch</span>
+            <div class="talent-name">guH</div>
+            <div class="talent-niche">Twitch · Counter Strike 2</div>
+            <div class="talent-reach">∞ seguidores</div>
             <div class="talent-line" aria-hidden="true"></div>
           </div>
         </article>
 
         <article class="talent-card">
-          <div class="talent-visual" aria-hidden="true">🏆</div>
+          <img class="talent-photo" src="images/talent-promindset.jpg" alt="ProMindset" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
             <span class="talent-platform-badge">YouTube</span>
