--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <div class="talent-grid reveal">
 
         <article class="talent-card">
-          <img class="talent-photo" src="images/FBZ.png" alt="FBZFPS" />
+          <img class="talent-photo" src="images/FBZ_opt.jpg" alt="FBZFPS" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
             <span class="talent-platform-badge">Twitch</span>
@@ -254,7 +254,7 @@
         </article>
 
         <article class="talent-card">
-          <img class="talent-photo" src="images/Marinho.jpg" alt="Marinho" />
+          <img class="talent-photo" src="images/Marinho_opt.jpg" alt="Marinho" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
             <span class="talent-platform-badge">Twitch</span>
@@ -266,7 +266,7 @@
         </article>
 
         <article class="talent-card">
-          <img class="talent-photo" src="images/Guh9.jpg" alt="guH" />
+          <img class="talent-photo" src="images/Guh9_opt.jpg" alt="guH" />
           <div class="talent-gradient"></div>
           <div class="talent-info">
             <span class="talent-platform-badge">Twitch</span>
