--- a/parceiros.html
+++ b/parceiros.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Integrity Agency S.A. — Representamos os maiores criadores de conteúdo digital do Brasil com integridade, estratégia e excelência." />
-  <meta name="keywords" content="agência influenciadores, streamers, marketing digital, gaming, esports, Brasil" />
-  <meta name="author" content="Integrity Agency S.A." />
-  <meta property="og:title"       content="Integrity Agency S.A." />
-  <meta property="og:description" content="Representamos os maiores criadores de conteúdo digital do Brasil." />
-  <meta property="og:type"        content="website" />
-  <meta property="og:image"       content="images/logo2.png" />
-  <meta property="og:url"         content="https://integrityagency.com.br" />
-  <title>INTEGRITY AGENCY S.A. — Influenciadores & Streamers</title>
+  <meta name="description" content="Marcas parceiras da Integrity Agency S.A. — Empresas que confiam em nossa gestão." />
+  <meta property="og:title" content="Parceiros — Integrity Agency S.A." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/logo2.png" />
+  <title>Parceiros — INTEGRITY AGENCY S.A.</title>
   <link rel="icon" type="image/png" href="images/logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -42,7 +38,7 @@
         <li><a href="servicos.html">Serviços</a></li>
         <li><a href="talentos.html">Talentos</a></li>
         <li><a href="processo.html">Processo</a></li>
-        <li><a href="parceiros.html">Parceiros</a></li>
+        <li><a href="parceiros.html" class="nav-active">Parceiros</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
       <button type="button" class="nav-cta" onclick="window.location.href='contato.html'">
@@ -54,63 +50,30 @@
     </nav>
   </header>
 
-  <main>
+  <main class="page-main">
 
-    <section class="hero" id="inicio">
-      <div class="hero-bg-glow" aria-hidden="true"></div>
-      <div class="hero-logo-wrap">
-        <div class="hero-logo-3d" id="heroLogo3d">
-          <img src="images/logo2.png" alt="Integrity Agency S.A. — Logo" width="340" height="400" />
-        </div>
-      </div>
-      <p class="hero-description">
-        Representamos os maiores criadores de conteúdo digital do Brasil
-        com integridade, estratégia e excelência incomparável.
-      </p>
-      <div class="hero-actions">
-        <a href="talentos.html" class="btn-gold">Conhecer o Roster</a>
-        <a href="servicos.html" class="btn-outline-gold">Nossos Serviços</a>
-      </div>
-      <div class="hero-stats" aria-label="Estatísticas">
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="280" data-suffix="+">280+</div>
-          <div class="hero-stat-label">Talentos</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="1.4" data-suffix="B">1.4B</div>
-          <div class="hero-stat-label">Alcance Total</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="420" data-suffix="+">420+</div>
-          <div class="hero-stat-label">Campanhas</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="98" data-suffix="%">98%</div>
-          <div class="hero-stat-label">Satisfação</div>
-        </div>
+    <div class="page-hero reveal">
+      <div class="section-eyebrow">Parceiros</div>
+      <h1 class="section-title">MARCAS PARCEIRAS</h1>
+      <p class="section-subtitle">Empresas que confiam na Integrity Agency</p>
+    </div>
+
+    <section class="brands-section" id="marcas">
+      <div class="brands-grid reveal" aria-label="Marcas parceiras">
+        <div class="brand-cell">REDBULL</div>
+        <div class="brand-cell">RAZER</div>
+        <div class="brand-cell">NUBANK</div>
+        <div class="brand-cell">SAMSUNG</div>
+        <div class="brand-cell">RIOT</div>
+        <div class="brand-cell">IFOOD</div>
+        <div class="brand-cell">LOGITECH</div>
+        <div class="brand-cell">NETFLIX</div>
+        <div class="brand-cell">NIKE</div>
+        <div class="brand-cell">CORSAIR</div>
+        <div class="brand-cell">BMOBILE</div>
+        <div class="brand-cell">STEAM</div>
       </div>
     </section>
-
-    <div class="marquee-wrap" aria-hidden="true">
-      <div class="marquee-track">
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-      </div>
-    </div>
 
   </main>
 
