--- a/processo.html
+++ b/processo.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Integrity Agency S.A. — Representamos os maiores criadores de conteúdo digital do Brasil com integridade, estratégia e excelência." />
-  <meta name="keywords" content="agência influenciadores, streamers, marketing digital, gaming, esports, Brasil" />
-  <meta name="author" content="Integrity Agency S.A." />
-  <meta property="og:title"       content="Integrity Agency S.A." />
-  <meta property="og:description" content="Representamos os maiores criadores de conteúdo digital do Brasil." />
-  <meta property="og:type"        content="website" />
-  <meta property="og:image"       content="images/logo2.png" />
-  <meta property="og:url"         content="https://integrityagency.com.br" />
-  <title>INTEGRITY AGENCY S.A. — Influenciadores & Streamers</title>
+  <meta name="description" content="Como trabalhamos — Método exclusivo da Integrity Agency S.A. desenvolvido para resultados excepcionais." />
+  <meta property="og:title" content="Processo — Integrity Agency S.A." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/logo2.png" />
+  <title>Processo — INTEGRITY AGENCY S.A.</title>
   <link rel="icon" type="image/png" href="images/logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,7 +37,7 @@
         <li><a href="agencia.html">A Agência</a></li>
         <li><a href="servicos.html">Serviços</a></li>
         <li><a href="talentos.html">Talentos</a></li>
-        <li><a href="processo.html">Processo</a></li>
+        <li><a href="processo.html" class="nav-active">Processo</a></li>
         <li><a href="parceiros.html">Parceiros</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
@@ -54,63 +50,43 @@
     </nav>
   </header>
 
-  <main>
+  <main class="page-main">
 
-    <section class="hero" id="inicio">
-      <div class="hero-bg-glow" aria-hidden="true"></div>
-      <div class="hero-logo-wrap">
-        <div class="hero-logo-3d" id="heroLogo3d">
-          <img src="images/logo2.png" alt="Integrity Agency S.A. — Logo" width="340" height="400" />
+    <div class="page-hero reveal">
+      <div class="section-eyebrow">Processo</div>
+      <h1 class="section-title">COMO TRABALHAMOS</h1>
+      <p class="section-subtitle">Método exclusivo desenvolvido para resultados excepcionais</p>
+    </div>
+
+    <section class="process-section" id="processo">
+      <div class="process-steps reveal">
+        <div class="proc-step">
+          <div class="proc-num">I</div>
+          <h4>Discovery</h4>
+          <p>Mapeamos o perfil, objetivos e potencial do criador ou da marca em profundidade.</p>
         </div>
-      </div>
-      <p class="hero-description">
-        Representamos os maiores criadores de conteúdo digital do Brasil
-        com integridade, estratégia e excelência incomparável.
-      </p>
-      <div class="hero-actions">
-        <a href="talentos.html" class="btn-gold">Conhecer o Roster</a>
-        <a href="servicos.html" class="btn-outline-gold">Nossos Serviços</a>
-      </div>
-      <div class="hero-stats" aria-label="Estatísticas">
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="280" data-suffix="+">280+</div>
-          <div class="hero-stat-label">Talentos</div>
+        <div class="proc-step">
+          <div class="proc-num">II</div>
+          <h4>Match</h4>
+          <p>Algoritmo exclusivo para cruzar dados e encontrar o parceiro verdadeiramente ideal.</p>
         </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="1.4" data-suffix="B">1.4B</div>
-          <div class="hero-stat-label">Alcance Total</div>
+        <div class="proc-step">
+          <div class="proc-num">III</div>
+          <h4>Estratégia</h4>
+          <p>Plano personalizado com metas claras, mensuráveis e alinhadas ao negócio.</p>
         </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="420" data-suffix="+">420+</div>
-          <div class="hero-stat-label">Campanhas</div>
+        <div class="proc-step">
+          <div class="proc-num">IV</div>
+          <h4>Execução</h4>
+          <p>Time dedicado acompanha cada etapa da campanha com atenção total ao detalhe.</p>
         </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="98" data-suffix="%">98%</div>
-          <div class="hero-stat-label">Satisfação</div>
+        <div class="proc-step">
+          <div class="proc-num">V</div>
+          <h4>Resultado</h4>
+          <p>Relatórios completos e iteração contínua para escalar o sucesso de forma consistente.</p>
         </div>
       </div>
     </section>
-
-    <div class="marquee-wrap" aria-hidden="true">
-      <div class="marquee-track">
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-      </div>
-    </div>
 
   </main>
 
