--- a/servicos.html
+++ b/servicos.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Integrity Agency S.A. — Representamos os maiores criadores de conteúdo digital do Brasil com integridade, estratégia e excelência." />
-  <meta name="keywords" content="agência influenciadores, streamers, marketing digital, gaming, esports, Brasil" />
-  <meta name="author" content="Integrity Agency S.A." />
-  <meta property="og:title"       content="Integrity Agency S.A." />
-  <meta property="og:description" content="Representamos os maiores criadores de conteúdo digital do Brasil." />
-  <meta property="og:type"        content="website" />
-  <meta property="og:image"       content="images/logo2.png" />
-  <meta property="og:url"         content="https://integrityagency.com.br" />
-  <title>INTEGRITY AGENCY S.A. — Influenciadores & Streamers</title>
+  <meta name="description" content="Serviços da Integrity Agency S.A. — Gestão de streamers, campanhas de influência, estratégia de conteúdo e muito mais." />
+  <meta property="og:title" content="Serviços — Integrity Agency S.A." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/logo2.png" />
+  <title>Serviços — INTEGRITY AGENCY S.A.</title>
   <link rel="icon" type="image/png" href="images/logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -39,7 +35,7 @@
       </a>
       <ul class="nav-links">
         <li><a href="agencia.html">A Agência</a></li>
-        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="servicos.html" class="nav-active">Serviços</a></li>
         <li><a href="talentos.html">Talentos</a></li>
         <li><a href="processo.html">Processo</a></li>
         <li><a href="parceiros.html">Parceiros</a></li>
@@ -54,61 +50,67 @@
     </nav>
   </header>
 
-  <main>
+  <main class="page-main">
 
-    <section class="hero" id="inicio">
-      <div class="hero-bg-glow" aria-hidden="true"></div>
-      <div class="hero-logo-wrap">
-        <div class="hero-logo-3d" id="heroLogo3d">
-          <img src="images/logo2.png" alt="Integrity Agency S.A. — Logo" width="340" height="400" />
-        </div>
-      </div>
-      <p class="hero-description">
-        Representamos os maiores criadores de conteúdo digital do Brasil
-        com integridade, estratégia e excelência incomparável.
-      </p>
-      <div class="hero-actions">
-        <a href="talentos.html" class="btn-gold">Conhecer o Roster</a>
-        <a href="servicos.html" class="btn-outline-gold">Nossos Serviços</a>
-      </div>
-      <div class="hero-stats" aria-label="Estatísticas">
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="280" data-suffix="+">280+</div>
-          <div class="hero-stat-label">Talentos</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="1.4" data-suffix="B">1.4B</div>
-          <div class="hero-stat-label">Alcance Total</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="420" data-suffix="+">420+</div>
-          <div class="hero-stat-label">Campanhas</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="98" data-suffix="%">98%</div>
-          <div class="hero-stat-label">Satisfação</div>
-        </div>
+    <div class="page-hero reveal">
+      <div class="section-eyebrow">Serviços</div>
+      <h1 class="section-title">NOSSA ATUAÇÃO</h1>
+      <p class="section-subtitle">Gestão completa, do talento ao resultado</p>
+    </div>
+
+    <section id="servicos">
+      <div class="services-grid reveal">
+        <article class="service-card">
+          <div class="service-roman">I</div>
+          <h3>Gestão de Streamers</h3>
+          <p>Gerenciamento completo de carreira para streamers na Twitch, YouTube Live e Kick. Contratos, crescimento de canal e monetização estratégica.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-roman">II</div>
+          <h3>Campanhas de Influência</h3>
+          <p>Conectamos marcas a criadores alinhados com seus valores. Estratégia, execução e métricas reais de performance em cada ativação.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-roman">III</div>
+          <h3>Estratégia de Conteúdo</h3>
+          <p>Roteiros, calendários e diretrizes criativas que maximizam engajamento e constroem audiências fiéis e duradouras em todas as plataformas.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-roman">IV</div>
+          <h3>Monetização</h3>
+          <p>Desbloqueamos múltiplos fluxos de receita — patrocínios, merch, produtos digitais, exclusivos e eventos ao vivo com retorno real.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-roman">V</div>
+          <h3>Análise & Dados</h3>
+          <p>Dashboard exclusivo com métricas em tempo real. Decisões baseadas em dados, com ROI transparente para marcas e criadores.</p>
+        </article>
+        <article class="service-card">
+          <div class="service-roman">VI</div>
+          <h3>Produção & Eventos</h3>
+          <p>Meetups, torneios, lives especiais e ativações físicas. Levamos o impacto digital para o mundo real com produção de alto nível.</p>
+        </article>
       </div>
     </section>
 
-    <div class="marquee-wrap" aria-hidden="true">
-      <div class="marquee-track">
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
+    <div class="numbers-wrap">
+      <div class="numbers-inner reveal" aria-label="Números da agência">
+        <div class="num-block">
+          <div class="num-val" data-count="280" data-suffix="+">280+</div>
+          <div class="num-label">Criadores Ativos</div>
+        </div>
+        <div class="num-block">
+          <div class="num-val" data-count="1.4" data-suffix="B">1.4B</div>
+          <div class="num-label">Alcance Combinado</div>
+        </div>
+        <div class="num-block">
+          <div class="num-val" data-count="48" data-suffix="M">R$48M</div>
+          <div class="num-label">Receitas Geradas</div>
+        </div>
+        <div class="num-block">
+          <div class="num-val" data-count="98" data-suffix="%">98%</div>
+          <div class="num-label">Satisfação de Marcas</div>
+        </div>
       </div>
     </div>
 
