--- a/talentos.html
+++ b/talentos.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Integrity Agency S.A. — Representamos os maiores criadores de conteúdo digital do Brasil com integridade, estratégia e excelência." />
-  <meta name="keywords" content="agência influenciadores, streamers, marketing digital, gaming, esports, Brasil" />
-  <meta name="author" content="Integrity Agency S.A." />
-  <meta property="og:title"       content="Integrity Agency S.A." />
-  <meta property="og:description" content="Representamos os maiores criadores de conteúdo digital do Brasil." />
-  <meta property="og:type"        content="website" />
-  <meta property="og:image"       content="images/logo2.png" />
-  <meta property="og:url"         content="https://integrityagency.com.br" />
-  <title>INTEGRITY AGENCY S.A. — Influenciadores & Streamers</title>
+  <meta name="description" content="Roster da Integrity Agency S.A. — Criadores de conteúdo de elite sob nossa gestão." />
+  <meta property="og:title" content="Talentos — Integrity Agency S.A." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/logo2.png" />
+  <title>Talentos — INTEGRITY AGENCY S.A.</title>
   <link rel="icon" type="image/png" href="images/logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,7 +36,7 @@
       <ul class="nav-links">
         <li><a href="agencia.html">A Agência</a></li>
         <li><a href="servicos.html">Serviços</a></li>
-        <li><a href="talentos.html">Talentos</a></li>
+        <li><a href="talentos.html" class="nav-active">Talentos</a></li>
         <li><a href="processo.html">Processo</a></li>
         <li><a href="parceiros.html">Parceiros</a></li>
         <li><a href="contato.html">Contato</a></li>
@@ -54,63 +50,62 @@
     </nav>
   </header>
 
-  <main>
+  <main class="page-main">
 
-    <section class="hero" id="inicio">
-      <div class="hero-bg-glow" aria-hidden="true"></div>
-      <div class="hero-logo-wrap">
-        <div class="hero-logo-3d" id="heroLogo3d">
-          <img src="images/logo2.png" alt="Integrity Agency S.A. — Logo" width="340" height="400" />
-        </div>
-      </div>
-      <p class="hero-description">
-        Representamos os maiores criadores de conteúdo digital do Brasil
-        com integridade, estratégia e excelência incomparável.
-      </p>
-      <div class="hero-actions">
-        <a href="talentos.html" class="btn-gold">Conhecer o Roster</a>
-        <a href="servicos.html" class="btn-outline-gold">Nossos Serviços</a>
-      </div>
-      <div class="hero-stats" aria-label="Estatísticas">
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="280" data-suffix="+">280+</div>
-          <div class="hero-stat-label">Talentos</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="1.4" data-suffix="B">1.4B</div>
-          <div class="hero-stat-label">Alcance Total</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="420" data-suffix="+">420+</div>
-          <div class="hero-stat-label">Campanhas</div>
-        </div>
-        <div class="hero-stat">
-          <div class="hero-stat-num" data-count="98" data-suffix="%">98%</div>
-          <div class="hero-stat-label">Satisfação</div>
-        </div>
+    <div class="page-hero reveal">
+      <div class="section-eyebrow">Talentos</div>
+      <h1 class="section-title">NOSSO ROSTER</h1>
+      <p class="section-subtitle">Criadores de conteúdo de elite sob nossa gestão</p>
+    </div>
+
+    <section class="talent-section" id="talentos">
+      <div class="talent-grid reveal">
+        <article class="talent-card">
+          <img class="talent-photo" src="images/FBZ_opt.jpg" alt="FBZFPS" />
+          <div class="talent-gradient"></div>
+          <div class="talent-info">
+            <span class="talent-platform-badge">Twitch</span>
+            <div class="talent-name">FbzFPS</div>
+            <div class="talent-niche">FPS · Counter Strike 2</div>
+            <div class="talent-reach">70K Seguidores Totais</div>
+            <div class="talent-line" aria-hidden="true"></div>
+          </div>
+        </article>
+        <article class="talent-card">
+          <img class="talent-photo" src="images/Marinho_opt.jpg" alt="Marinho" />
+          <div class="talent-gradient"></div>
+          <div class="talent-info">
+            <span class="talent-platform-badge">Twitch</span>
+            <div class="talent-name">Marinho</div>
+            <div class="talent-niche">FPS · Counter Strike 2</div>
+            <div class="talent-reach">50K Seguidores Totais</div>
+            <div class="talent-line" aria-hidden="true"></div>
+          </div>
+        </article>
+        <article class="talent-card">
+          <img class="talent-photo" src="images/Guh9_opt.jpg" alt="guH" />
+          <div class="talent-gradient"></div>
+          <div class="talent-info">
+            <span class="talent-platform-badge">Twitch</span>
+            <div class="talent-name">guH</div>
+            <div class="talent-niche">Twitch · Counter Strike 2</div>
+            <div class="talent-reach">∞ seguidores</div>
+            <div class="talent-line" aria-hidden="true"></div>
+          </div>
+        </article>
+        <article class="talent-card">
+          <img class="talent-photo" src="images/talent-promindset.jpg" alt="ProMindset" />
+          <div class="talent-gradient"></div>
+          <div class="talent-info">
+            <span class="talent-platform-badge">YouTube</span>
+            <div class="talent-name">ProMindset</div>
+            <div class="talent-niche">Esports · Coaching</div>
+            <div class="talent-reach">5.4M inscritos</div>
+            <div class="talent-line" aria-hidden="true"></div>
+          </div>
+        </article>
       </div>
     </section>
-
-    <div class="marquee-wrap" aria-hidden="true">
-      <div class="marquee-track">
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-        <span>GAMING</span><span class="dot">◆</span>
-        <span>LIFESTYLE</span><span class="dot">◆</span>
-        <span>ENTRETENIMENTO</span><span class="dot">◆</span>
-        <span>ESPORTS</span><span class="dot">◆</span>
-        <span>MÚSICA</span><span class="dot">◆</span>
-        <span>MODA</span><span class="dot">◆</span>
-        <span>GASTRONOMIA</span><span class="dot">◆</span>
-        <span>TECNOLOGIA</span><span class="dot">◆</span>
-      </div>
-    </div>
 
   </main>
 
